# CPP-Study

./: .gitignore  CMakeLists.txt  README.md
AgeOfEmpires3DE-API/: CMakeLists.txt
AgeOfEmpires3DE-API/headers/: AbstractLandMilitary.h  AbstractRangedMilitary.h  AbstractUnit.h  LandUnit.h  Unit.h
AgeOfEmpires3DE-API/headers/infantry/: AbstractCounterLightInfantry.h  AbstractLightInfantry.h  AbstractMeleeLightInfantry.h  AbstractRangedInfantry.h
AgeOfEmpires3DE-API/headers/infantry/shock-infantry/: AbstractShockInfantry.h
AgeOfEmpires3DE-API/src/: main.cpp
DSA-Algorithms/sorting/src/: main.cpp
Design-Patterns/: CMakeLists.txt
Design-Patterns/Creational-Patterns/: CMakeLists.txt
Design-Patterns/Creational-Patterns/abstract-factory/: CMakeLists.txt
Design-Patterns/Creational-Patterns/abstract-factory/example1/: LandUnit.h  NavalUnit.h  Unit.h
Design-Patterns/Creational-Patterns/factory-method/: CMakeLists.txt  main.cpp
Design-Patterns/Creational-Patterns/factory-method/example1/: AdobeAcrobatClient.cpp  AdobeAcrobatClient.h  Client.h  Document.cpp  Document.h  PDFDocument.cpp  PDFDocument.h
Design-Patterns/Creational-Patterns/factory-method/example2/: BeefBurger.cpp  BeefBurger.h  BeefRestaurant.cpp  BeefRestaurant.h  Burger.h  Restaurant.cpp  Restaurant.h  VeggieBurger.cpp  VeggieBurger.h  VeggieRestaurant.cpp  VeggieRestaurant.h
Design-Patterns/Creational-Patterns/factory-method/example3/: JsonMessage.h  Message.h  MessageFactory.h  TextMessage.h
Design-Patterns/Creational-Patterns/factory-method/example4/: Figure.h  TextFigure.h  TextManipulator.h
Design-Patterns/Creational-Patterns/factory-method/example5/: JoshuaDocument.cpp  JoshuaDocument.h
Design-Patterns/Structural-Patterns/: CMakeLists.txt
Design-Patterns/behavioral-patterns/: CMakeLists.txt
Design-Patterns/creational-patterns/: CMakeLists.txt
Design-Patterns/creational-patterns/abstract-factory/: CMakeLists.txt
Design-Patterns/creational-patterns/factory-method/example1/: Client.h  PDFDocument.h
Design-Patterns/creational-patterns/factory-method/example2/: BeefRestaurant.h  Burger.h  Restaurant.h
Design-Patterns/creational-patterns/factory-method/example3/: JsonMessageFactory.h  TextMessageFactory.h
Design-Patterns/creational-patterns/factory-method/example4/: LineFigure.h  LineManipulator.cpp  LineManipulator.h  Manipulator.h  TextManipulator.cpp
Effective-CPP-Digital-Collection/: CMakeLists.txt
Effective-CPP-Digital-Collection/effective-cpp-55-specific-ways-book/: CMakeLists.txt
Effective-CPP-Digital-Collection/effective-cpp-55-specific-ways-book/chapter-0-intro/: CMakeLists.txt
Effective-CPP-Digital-Collection/effective-cpp-55-specific-ways-book/chapter-0-intro/src/: main.cpp
OOP/Inheritance/: main.cpp
The-CPP-Language/: CMakeLists.txt
The-CPP-Language/part1-chapter2-basics/: CMakeLists.txt
The-CPP-Language/part1-chapter2-basics/include/: Vector.h
The-CPP-Language/part1-chapter2-basics/src/: Vector.cpp  main.cpp  user.cpp
